--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/http-status-codes": "^1.2.0",
+    "express": "^4.18.2",
+    "http-status-codes": "^2.2.0"
   }
 }
