--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "yarn nodemon src/index.ts"
+    "dev": "yarn nodemon src/index.ts",
+    "typeorm": "typeorm-ts-node-esm -d ./src/config/db.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -27,7 +28,12 @@
   },
   "dependencies": {
     "@types/http-status-codes": "^1.2.0",
+    "@types/pg": "^8.6.6",
+    "@types/reflect-metadata": "^0.1.0",
     "express": "^4.18.2",
-    "http-status-codes": "^2.2.0"
+    "http-status-codes": "^2.2.0",
+    "pg": "^8.9.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.11"
   }
 }
