--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,14 @@
     "sourceMap": true,
     "outDir": "build",
     "baseUrl": ".",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "paths": {
       "@controllers/*": ["./src/controllers/*"],
       "@routes/*": ["./src/routes/*"],
       "@services/*": ["./src/services/*"],
-      "@models/*": ["./src/models/*"]
+      "@models/*": ["./src/models/*"],
+      "@config/*": ["./src/config/*"]
     }
   },
   "include": ["src/**/*"],
