--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/express-fileupload": "^1.4.1",
     "@types/http-status-codes": "^1.2.0",
     "@types/pg": "^8.6.6",
     "@types/reflect-metadata": "^0.1.0",
+    "@types/uuid": "^9.0.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "http-status-codes": "^2.2.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.11",
+    "uuid": "^9.0.0"
   }
 }
