--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "yarn nodemon src/index.ts",
-    "typeorm": "typeorm-ts-node-esm -d ./src/config/db.ts"
+    "dev": "yarn nodemon backend/index.ts",
+    "typeorm": "typeorm-ts-node-esm -d ./backend/config/db.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
