--- a/web/package.json
+++ b/web/package.json
@@ -12,9 +12,11 @@
     "@next/font": "13.1.6",
     "@radix-ui/colors": "^0.1.8",
     "@stitches/react": "^1.2.8",
+    "@types/axios": "^0.14.0",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
