--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,8 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.2",
+    "effector": "^22.8.1",
+    "effector-react": "^22.5.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
